[package]
name = "rustTest"
version = "0.1.0"
authors = ["Meshcheryakov Andrey <Meshcheryakov.A.And@sberbank.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.7", features = ["tcp", "os-poll"] }
threadpool = "1.0"