[package]
name = "rustTest"
version = "0.1.0"
authors = ["Meshcheryakov Andrey <Meshcheryakov.A.And@sberbank.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.7", features = ["tcp", "os-poll"] }
#mio = { version = "0.6"}
threadpool = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"